--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,27 +1,33 @@
+<% content_for(:body_id, "admin_pages") %> 
 <h1>Listing users</h1>
+<div class="row">
+  <div class= "large-12 columns">
+      <div class= "panel">
+        <table id="user_table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Admin?</th>
+            </tr>
+          </thead>
+          <tbody>
+          <% @users.each do |user| %>
+            <tr>
+            <td><%= user.name %></td>
+            <td><%= user.email %></td>
+            <td><%= user.admin? %></td>
+            <td><%= user.id %></td>
+            <td><%#= render 'form' %></td>
+            <td><%= link_to "Edit Admin", edit_admin_user_path(user) %></td>
+          <% end %>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+  
 
-<table>
-  <thead>
-    <tr>
-      <th>Admin</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.admin %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
