Redirects to student or admin home page

--- a/app/assets/stylesheets/admin_pages.css.scss
+++ b/app/assets/stylesheets/admin_pages.css.scss
@@ -68,3 +68,12 @@ background-size: 100% auto;
   #user_table {
     margin:auto;
   }
+
+  .logo {
+  margin-left: 10px;
+  margin-top:10px;
+ }
+
+ .admin-nav {
+  font-size: .75em;
+ }
