--- a/app/assets/stylesheets/lesson_pages.css.scss
+++ b/app/assets/stylesheets/lesson_pages.css.scss
@@ -52,3 +52,12 @@ background-size: 100% auto;
 		background:rgba(51, 138, 170,0.4);
 }
 }
+
+.logo {
+  margin-left: 10px;
+  margin-top:10px;
+ }
+
+ .student-nav {
+  font-size: .75em;
+ }
