--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -15,7 +15,7 @@
 
 <div class="row">
 	<div class="columns large-12">
-		<h1><%= @instruction.body %></strong></h2><br>
+		<h6><%= @instruction.body %></h6><br>
 	</div>
   <div class="columns large-12">
     
