--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,80 +1,72 @@
+<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+
 <% content_for(:body_id, "subject")%> 
-<body>
-  <div class="row">
-    <div class="large-4 small-6 centered columns">
-      <div class="panel"><h3>Get Prepared</h3>
-        <div class="slider">
-          <%= image_tag("basics.jpg")%>
-        </div>
-        
-          <h4>Student Resources</h4>      
-          <h6>Taking the SAT? Practice your skills with Prepify for <span class="label">free!</span>
-          </h6>      
+
+<div class="row">
+  <div class="large-4 small 6 columns centered">   
+      <h2>Get Prepared</h3>
+        <div class="image">
+          <%= image_tag("preaparing.jpg")%>
+        </div>        
+          <h4>Student Resources</h4> 
+          <section>   
           <h5 class="subheader"><a href="http://sat.collegeboard.org/home">SAT Collegeboard</a></h5>     
-          <h5 class="subheader"><a href="#">University Listing</a></h5>     
-     
-      </div>
-    </div>  
-      <div class="large-6 small-6 centered columns">
-        <div class="panel">
-          <h3>Get Started with SAT Basics!</h3>          
-            <div class="slider">
-              <%= image_tag("basics.jpg")%></div>   
-                <div class="panel">        
-                 
-                    <%# if current_user.completed_subject?(@subject)%>
-                      <h5>Completed Lesson</h5>
-                    <%# elsif current_user.started_subject?(@subject) %>          
-                      <h3><%#= link_to "Resume Lesson", current_page(current_user, @subject) %><h3>
-                    <%# else %>
-                      <h3><%#= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
-                    <%# end %>
-                  <h5 class="subheader"><%= link_to "Start Course" %></h5>
-            </div>          
-          </div>
-          <hr>
-        </div>
-      </div>
+          <h5 class="subheader"><a href="#">University Listing</a></h5>
+        </section>
+</div>    
+  
+
+  <div class="large-4 small 6 columns centered">    
+             
+        <div class="panel image">
+          <h2>Get Started!</h3> 
+          <%= image_tag("start-3.jpeg")%>
+       
+      <%# if current_user.completed_subject?(@subject)%>
+      <!-- <h5>Completed Lesson</h5> -->
+      <%# elsif current_user.started_subject?(@subject) %>          
+      <h3><%#= link_to "Resume Lesson", current_page(current_user, @subject) %><h3>
+      <%# else %>
+      <h3><%#= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
+      <%# end %>      
+      <h5 class="subheader"><%= link_to "Start Course" %></h5>
     </div>
-    <div class="row">
-      <div class="large-4 small 6 column centered">
-    <div class="panel centered">
-      <h3>All Courses<h3>
-      </div>
+    </div>
+</div>
+
+<div class="panel">
+  <div class="row">
+    <div class="large-4 small 6 centeredcolumns ">      
+        <h1 class="bottom-nav">All Courses</h1>
     </div>
   </div>
 
-  <div class="large-8 centered columns ">
-          <div class="row">
-            
-            <div class="large-4 small-6 column offset by 4">
-              <%= image_tag("math-2.jpeg")%>
+  <div class="row">         
+    <div class="large-4 small-6 columns centered">
+      <%= image_tag("math-2.jpeg")%>
+      <div class="panel">     
+        <h3><%= Subject.find(1).section %></h3>
+        <%= link_to "See Courses", user_subject_path(current_user, Subject.find(1))%>
+      </div>
+    </div>
     
-              <div class="panel">
-                <h5><%= Subject.find(1).section %></h5>
-                <h6 class="subheader"><%= link_to "See Courses", user_subject_path(current_user, Subject.find(1))%></h6>
-              </div>
-            </div>
-            
-            <div class="large-4 small-6 columns centered">
-              <%= image_tag("books-2.jpg")%>
-
-  
-              <div class="panel">
-                <h5><%= Subject.find(2).section%></h5>
-                <h6 class="subheader"><%= link_to "See Courses" , user_subject_path(current_user, Subject.find(2))%></h6>
-              </div>
-            </div>
+    <div class="large-4 small-6 columns centered">
+      <%= image_tag("word.jpg")%>
+      <div class="panel">
+        <h3><%= Subject.find(2).section%></h3>
+        <h6 class="subheader"><%= link_to "See Courses" , user_subject_path(current_user, Subject.find(2))%></h6>
+      </div>
+    </div>
               
-            <div class="large-4 small-6 columns offset 8">
-              <%= image_tag("writing.jpeg")%>
-
-              <div class="panel">
-                <h5> <%= Subject.find(3).section%></h5>
-                <h6 class="subheader"><%= link_to "See Courses", user_subject_path(current_user, Subject.find(3))%></h6>
-              </div>
-            </div>           
-          </div>
+    <div class="large-4 small-6 columns centered">
+      <%= image_tag("writing.jpeg")%>
+      <div class="panel">
+        <h3><%= Subject.find(3).section%></h3>
+        <label><%= link_to "See Courses", user_subject_path(current_user, Subject.find(3))%></label>
+      </div>
+    </div>           
+  </div>
+</div>
 
     <!-- End Thumbnails -->
 
@@ -82,31 +74,29 @@
  
  
   <!-- Footer -->
+<footer class="bottom-nav">
   <div class="row">
-    <div class="columns large-12 large-centered">
-      <div class="radius panel">
-    <footer class="bottom">
-      <div class="large-12 columns">        
+    <div class="columns large-12 large-centered">   
         
           <div class="large-6 columns">            
-            <p class="subtext">&copy; Copyright Prepify, LLC</p>
+            <p class="bottom-nav">&copy; Copyright Prepify, LLC</p>
           </div>
           <div class="large-6 columns">
             <ul class="inline-list right">
-              <li><%= link_to 'Home', user_path(@user) %></li>
+              <li><h5 class="bottom-nav"><%= link_to 'Home', user_path(@user) %></h5><li>|</li></li>
               <li>
-                <a href="#">Sign Up</a>
+                <h5 class="bottom-nav"><%= link_to 'Sign Out'%></h5> 
+                <li>|</li>
               </li>
               <li>
-                <a href="#">All Courses</a>
-                <ul class="ul-dash">                  
-                  <li class="subtext"><%= Subject.first.name %></li>
-                  <li class="subtext"><%= Subject.find(2).name %></li>
-                  <li class="subtext"><%= Subject.find(3).name %></li>
-                </ul>
+                <h5 class="bottom-nav"><%= link_to 'Courses'%></h5>                          
+                  <!-- <div class="subtext"><%= Subject.first.name %></div>
+                   <div class="subtext"><%= Subject.find(2).name %></div>
+                   <div class="subtext"><%= Subject.find(3).name %></div> -->               
+                <li>|</li>
               </li>
               <li>
-                <a href="#">Practice SAT</a>
+                <h5 class="bottom-nav"><%= link_to 'Practice SAT'%></h5>
               </li>
             </ul>            
           </div>        
@@ -115,13 +105,9 @@
     
   </div>
   
-  <div class="row">
-    <div class="columns large-12-centered">
-      <%= link_to 'Home', user_path(current_user) %>
-    </div>
-  </div>
+  
   </footer>
-</body>
+
 
 
 
