update lesson style views with different font and dashboard icon images

--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -95,10 +95,11 @@ background-size: 100% auto;
 	// 	border-radius: 250px;
 	// }
 
-	.panel .image {	
-		background-image: url("start-2.jpg");
+	.dash {
+		background-image: url("retina_wood.png");
 		background-repeat: no-repeat;
 		background-size: 100% auto;
+
 	}
 	
 	
