--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -3,7 +3,7 @@ $prepifycolor: #338aaa;
 $darkcolor: darken($prepifycolor, 40%);
 $lightcolor: lighten($prepifycolor, 20%);
 
-background-image: url("ticks.png");
+background-image: url("retina_wood.png");
 background-repeat: no-repeat;
 background-size: 100% auto;
 		
