update image for prepared icon

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -6,7 +6,7 @@
   <div class="large-4 small 6 columns centered">   
       <h2>Get Prepared</h3>
         <div class="image">
-          <%= image_tag("preaparing.jpg")%>
+          <%= image_tag("prepare.jpeg")%>
         </div>        
           <h4>Student Resources</h4> 
           <section>   
@@ -18,7 +18,7 @@
 
   <div class="large-4 small 6 columns centered">    
              
-        <div class="panel image">
+        
           <h2>Get Started!</h3> 
           <%= image_tag("start-3.jpeg")%>
        
@@ -30,7 +30,7 @@
       <h3><%#= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
       <%# end %>      
       <h5 class="subheader"><%= link_to "Start Course" %></h5>
-    </div>
+    
     </div>
 </div>
 
