--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -70,7 +70,7 @@ background-size: 100% auto;
 			width: 200px;
 			border: 10px solid white;
 			border-radius:15px;
-			font-family: 'Leckerli One', cursive;
+			font-family: 'Sansita One', cursive;
 			font-size: 2em;
 			padding: 5px;
 		}
@@ -85,8 +85,6 @@ background-size: 100% auto;
 		background-color: white;
 		width: 90%;
 		height: 700px;
-		white-space: pre-wrap;
-
 
 		p {
 			font-size: 1.5em;
