Add new route but not properly name. New subject button has hidden_field for section name

--- a/app/views/admin/subjects/_form.html.erb
+++ b/app/views/admin/subjects/_form.html.erb
@@ -12,8 +12,9 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :section %><br>
-    <%= f.text_field :section %>
+    <%#= f.label :section %><br>
+    <%#= f.text_field :section %>
+    <%= f.hidden_field(:section, :value => "Math") %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
