--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:body_id, "admin_pages") %> 
 <h1>Editing user</h1>
 
-<%= render 'admin/form' %>
+<%= render 'form' %>
 
 <%#= link_to 'Show', @user %> |
 <%#= link_to 'Back', users_path %>
