--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -18,7 +18,8 @@
             <td><%= user.email %></td>
             <td><%= user.admin? %></td>
             <td><%= user.id %></td>
-            <td><%= render 'form' %></td>
+            <td><%#= render 'form' %></td>
+            
             <td><%= link_to "Edit Admin", edit_admin_user_path(user) %></td>
           <% end %>
             </tr>
