--- a/app/views/admin/subjects/_form.html.erb
+++ b/app/views/admin/subjects/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="field">
     <%#= f.label :section %><br>
     <%#= f.text_field :section %>
-    <%= f.hidden_field(:section, :value => "Math") %>
+    <%= f.hidden_field(:section) %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
