--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -10,7 +10,7 @@
   <div class="large-12 ">
     <div class="panel">
       <h3>Math Lessons</h3>
-       <a href="<%= admin_subjects_new_math_path %>" class="small button">Create A New Math Subject</a>
+       <a href="<%= admin_new_subject_with_section_path(section: 'Math') %>" class="small button">Create A New Math Subject</a>
       <table width="100%">
         <thead>
         </thead>
@@ -33,7 +33,7 @@
 
     <div class="panel">
       <h3>Critical Reading Lessons</h3>
-      <a href="<%= admin_subjects_new_reading_path %>" class="small button">Create A New Critical Reading Subject</a>
+      <a href="<%= admin_new_subject_with_section_path(section: 'Reading') %>" class="small button">Create A New Critical Reading Subject</a>
       <table width="100%">
         <thead>
           <tr> 
@@ -46,7 +46,7 @@
           <% @subjects.each do |subject| %>
             
             <tr>
-            <% if subject.section == "Critical Reading" %>
+            <% if subject.section == "Reading" %>
               <td><%= link_to "#{subject.name} (#{subject.pages.count} pages)", admin_subject_pages_path(subject) %></td>
               <td><%= link_to 'Edit Subject Information', edit_admin_subject_path(subject) %></td>
               <td><%= link_to 'Delete', admin_subject_path(subject), method: :delete %></td>
@@ -59,7 +59,7 @@
 
     <div class="panel">
       <h3>Writing Lessons</h3>
-      <a href="<%= admin_subjects_new_writing_path %>" class="small button">Create A New Writing Subject</a>
+      <a href="<%= admin_new_subject_with_section_path(section: 'Writing') %>" class="small button">Create A New Writing Subject</a>
       <table width="100%">
         <thead>
           <tr>
