--- a/app/views/admin/subjects/new.html.erb
+++ b/app/views/admin/subjects/new.html.erb
@@ -1,19 +1,18 @@
-<%# content_for(:body_id, "admin_pages") %>
-<!-- <div class="row">
+<% content_for(:body_id, "admin_pages") %>
+<div class="row">
   <div class="columns large-12">
     <h1>New subject</h1>
   </div>
-</div> -->
-
-<!-- <div class="row">
-  <div class="small-6 small-2 columns">
-    <%#= render 'form' %>
 </div>
- -->
-<!-- <div class="row">
+
+<div class="row">
+  <div class="small-6 small-2 columns">
+    <%= render 'form' %>
+</div>
+
+<div class="row">
   <div class="columns large-12">
   <%= link_to 'Back', admin_subjects_path %>
 
   </div>
 </div>
- -->
