--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,20 +8,26 @@
             <tr>
               <th>Name</th>
               <th>Email</th>
+              <th>User ID </th>
               <th>Admin?</th>
             </tr>
           </thead>
           <tbody>
           <% @users.each do |user| %>
             <tr>
-            <td><%= user.name %></td>
+            <td>
+              <% if user.admin? %>
+                <%= user.name %> (Admin)
+              <% else %>
+                <%= user.name %>
+              <% end %>
+            </td>
             <td><%= user.email %></td>
-            <td><%= user.admin? %></td>
             <td><%= user.id %></td>
-            <td><%#= render 'form' %></td>
-            
-            <td><%= link_to "Edit Admin", edit_admin_user_path(user) %></td>
-          <% end %>
+            <td><%= render partial: 'form', locals: {user: user} %></td>
+    
+             <% end %>
+          
             </tr>
           </tbody>
         </table>
