--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -39,7 +39,7 @@
         
           
           <div class="large-8 small-6 columns"> 
-            <div class="panel callout" visibility: hidden >
+            <div class="panel" visibility: hidden >
              <h4></h4>
               <h3><%= link_to 'Next Page', next_page(current_user, @page)%></h3>
               <%= progress_bar(progress(@page))%>         
@@ -55,8 +55,7 @@
             <div class="row">
               <div class="large-6 columns">
                 <div class="footer">
-                 <%#= image_tag("Prepify_logo.png", :class => "logo")%>
-                
+                 <%= image_tag("Prepify_logo.png", :class => "logo")%>                
                 <p>&copy; Copyright Prepify LLC</p>
               </div>
               </div>
@@ -91,20 +90,18 @@
 		var user_choice = $('.choice input:checked').val();
 		// Compare with actual answer
 		if (user_choice == <%= @question.correct_answer%>){
-			$('.panel').toggle("clip");
+			$('.panel').toggle("slide");
 			$('.panel h4').addClass('success label').append("Correct!");
-			$('.submit').toggle();
-			$('.show').toggle("clip");
+			$('.submit').toggle();			
 			$('.progress').toggle();
       $('.progress').show();
 			
 
 		}
 		else {
-      $('.panel').toggle('clip');
+      $('.panel').toggle('slide');
 			$('.panel h4').addClass('alert label').append("Incorrect!");
 			$('.submit').toggle();
-			$('.show').toggle();
 			$('.progress').toggle();
 			$('.progress').show();
 		}		
