--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -5,10 +5,7 @@
 <div class="row">
   <div class="large-4 small 6 columns centered">   
       <h2>Get Prepared</h3>
-        <div class="image">
-          <%= image_tag("prepare.jpeg")%>
-        </div>        
-          <h4>Student Resources</h4> 
+          <%= image_tag("prepare.jpeg")%>        
           <section>   
           <h5 class="subheader"><a href="http://sat.collegeboard.org/home">SAT Collegeboard</a></h5>     
           <h5 class="subheader"><a href="#">University Listing</a></h5>
@@ -34,39 +31,40 @@
     </div>
 </div>
 
-<div class="panel">
+<div class="center-header panel">
   <div class="row">
-    <div class="large-4 small 6 centeredcolumns ">      
-        <h1 class="bottom-nav">All Courses</h1>
+    <div class="large-4 small 6 centered columns ">      
+        <h1 class="bottom-nav ">All Courses</h1>
     </div>
   </div>
+</div>
 
   <div class="row">         
-    <div class="large-4 small-6 columns centered">
+    <div class="large-4 columns centered ">
       <%= image_tag("math.jpg")%>
-      <div class="dash panel">     
+      <div class="panel">     
         <h3><%= Subject.find(1).section %></h3>
         <%= link_to "See Courses", user_subject_path(current_user, Subject.find(1))%>
       </div>
     </div>
     
-    <div class="large-4 small-6 columns centered">
+    <div class="large-4 columns centered">
       <%= image_tag("word.jpg")%>
-      <div class="dash panel">
+      <div class="panel">
         <h3><%= Subject.find(2).section%></h3>
         <h6 class="subheader"><%= link_to "See Courses" , user_subject_path(current_user, Subject.find(2))%></h6>
       </div>
     </div>
               
-    <div class="large-4 small-6 columns centered">
+    <div class="large-4 columns centered">
       <%= image_tag("write.jpeg")%>
-      <div class="dash panel">
+      <div class="panel">
         <h3><%= Subject.find(3).section%></h3>
         <label><%= link_to "See Courses", user_subject_path(current_user, Subject.find(3))%></label>
       </div>
     </div>           
   </div>
-</div>
+
 
     <!-- End Thumbnails -->
 
@@ -76,14 +74,13 @@
   <!-- Footer -->
 <footer class="bottom-nav">
   <div class="row">
-    <div class="columns large-12 large-centered">   
-        
+    <div class="large-12 columns ">        
           <div class="large-6 columns">            
             <p class="bottom-nav">&copy; Copyright Prepify, LLC</p>
           </div>
           <div class="large-6 columns">
             <ul class="inline-list right">
-              <li><h5 class="bottom-nav"><%= link_to 'Home', user_path(@user) %></h5><li><h5 class="bottom-nav">|</h5></li></li>
+              <li><h5 class="bottom-nav"><%= link_to 'Home', user_path(@user)%></h5><li><h5 class="bottom-nav">|</h5></li></li>
               <li>
                 <h5 class="bottom-nav"><%= link_to 'Sign Out'%></h5> 
                 <li><h5 class="bottom-nav">|</h5></li>
