Finishes MVP styling for multi-page login

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row" id="top">
 
   <div class="large-6 columns">
-    <%= image_tag("Prepify_logo.png", :class => "logo")%>
+    <%= image_tag("Prepify_logo.png")%>
     <br>
     <br>
     <p>"Free Online SAT Prep"</p>
