--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -1,5 +1,6 @@
 #registrations_new {
 $prepifycolor: #338aaa;
+$chairaccent: #233159;
 $darkcolor: darken($prepifycolor, 40%);
 $lightcolor: lighten($prepifycolor, 20%);
 
@@ -8,7 +9,7 @@ background-image: url("school_logo.jpg");
 background-repeat: no-repeat;
 background-size: 100% auto;
 
-	.logo {
+	.pics {
 		width: 80%;
 		-moz-border-radius: 150px/150px;
     	-webkit-border-radius: 150px 150px;
@@ -38,6 +39,7 @@ background-size: 100% auto;
 			color: white;
 			text-shadow:0px 0px 10px black;
 			font-family: 'Source Sans Pro', sans-serif;
+			margin-top: 50px;
 		}
 
 
@@ -86,10 +88,11 @@ background-size: 100% auto;
 		width: 90%;
 		height: 700px;
 
+
 		p {
-			font-size: 1.5em;
-			color: $darkcolor;
-			font-family: 'Source Sans Pro', sans-serif;
+			font-size: 1.75em;
+			color: $chairaccent;
+			font-family: 'Tinos', sans-serif;
 		}
 
 		h2 {
@@ -102,12 +105,10 @@ background-size: 100% auto;
 
 	}
 
-	.below:first-child {
-		border-top-right-radius: 50px;
-		border-top-left-radius: 50px; 
+	.border {
+		border-top-right-radius: 50px; 
+		border-top-left-radius: 50px;
 	}
-
-
 
 }
 
