--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -2,38 +2,11 @@
 
 <% content_for(:body_id, "subject")%> 
 
-<div class="row">
-  <div class="large-4 small 6 columns centered">   
-      <h2>Get Prepared</h3>
-          <%= image_tag("prepare.jpeg")%>        
-          <section>   
-          <h5 class="subheader"><a href="http://sat.collegeboard.org/home">SAT Collegeboard</a></h5>     
-          <h5 class="subheader"><a href="#">University Listing</a></h5>
-        </section>
-</div>    
-  
 
-  <div class="large-4 small 6 columns centered">    
-             
-        
-          <h2>Get Started!</h3> 
-          <%= image_tag("start-3.jpeg")%>
-       
-      <%# if current_user.completed_subject?(@subject)%>
-      <!-- <h5>Completed Lesson</h5> -->
-      <%# elsif current_user.started_subject?(@subject) %>          
-      <h3><%#= link_to "Resume Lesson", current_page(current_user, @subject) %><h3>
-      <%# else %>
-      <h3><%#= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
-      <%# end %>      
-      <h5 class="subheader"><%= link_to "Start Course" %></h5>
-    
-    </div>
-</div>
 
-<div class="center-header panel">
+<div class="panel">
   <div class="row">
-    <div class="large-4 small 6 centered columns ">      
+    <div class="large-4 centered columns ">      
         <h1 class="bottom-nav ">All Courses</h1>
     </div>
   </div>
@@ -44,12 +17,12 @@
       <%= image_tag("math.jpg")%>
       <div class="panel">     
         <h3><%= Subject.find(1).section %></h3>
-        <%= link_to "See Courses", user_subject_path(current_user, Subject.find(1))%>
+        <h6 class="subheader"><%= link_to "See Courses", user_subject_path(current_user, Subject.find(1))%></h6>
       </div>
     </div>
     
     <div class="large-4 columns centered">
-      <%= image_tag("word.jpg")%>
+      <%= image_tag("math.jpg")%>
       <div class="panel">
         <h3><%= Subject.find(2).section%></h3>
         <h6 class="subheader"><%= link_to "See Courses" , user_subject_path(current_user, Subject.find(2))%></h6>
@@ -57,10 +30,10 @@
     </div>
               
     <div class="large-4 columns centered">
-      <%= image_tag("write.jpeg")%>
+      <%= image_tag("math.jpg")%>
       <div class="panel">
         <h3><%= Subject.find(3).section%></h3>
-        <label><%= link_to "See Courses", user_subject_path(current_user, Subject.find(3))%></label>
+        <h6 class="subheader"><%= link_to "See Courses", user_subject_path(current_user, Subject.find(3))%></h6>
       </div>
     </div>           
   </div>
