Fixes line height bug

--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -91,6 +91,7 @@ background-size: 100% auto;
 
 		p {
 			font-size: 1.75em;
+			line-height: 1.9em;
 			color: $chairaccent;
 			font-family: 'Tinos', sans-serif;
 		}
