Style subject index with 3 columns

--- a/app/views/admin/subjects/_new_math_form.erb
+++ b/app/views/admin/subjects/_new_math_form.erb
@@ -12,15 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%#= f.label :section %><br>
-    <%#= f.text_field :section %>
     <%= f.hidden_field(:section, :value => "Math") %>
   </div>
-  <div class="field">
-    <%= f.label :name %><br>
+  <div class="large-7 columns field flush-left">
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'tiny button' %>
   </div>
 <% end %>
