--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,6 @@
             <li class="student-nav"><%= link_to 'Report Card', user_path(current_user)  %></li>
             <li class="divider"></li>
             <li class= "has-dropdown student-nav"><a href="#" >Hello <%= current_user.name %></a>
-              <%#= link_to "Hello #{current_user.name}", edit_user_registration_path%><!-- </strong> -->
               <ul class= "dropdown">
                 <li class="student-nav">
                   <%= link_to 'Edit Profile', edit_user_registration_path %></li>
@@ -72,7 +71,7 @@
 
         <!-- If admin -->
         <% elsif current_user.admin %>
-
+  
          <ul class="title-area">        
           <li class="name">
             <%= image_tag("Prepify_logo_white.png", size: "100", class:"logo") %>
@@ -103,6 +102,9 @@
           </ul>
         </section>
       </nav>
+      <div class="row"></div>
+
+      <div id="banner"></div>
         <% end %>
 
       <% else %>
